removed some blue on mobile

--- a/bold.html
+++ b/bold.html
@@ -51,10 +51,10 @@
     <p STYLE="color: #8a8788; font-size: 80%"> /bəʊld/ 1. showing a willingness to take risks; confident and courageous.</p>
 </div>
 
-<table loading="lazy" style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
+                <img  loading="eager" class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
         </th>
         <th style="width:35%;">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange2.webp" style="width: 100%">
@@ -70,12 +70,12 @@
     </tr>
 </table>
 
-<table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <th style="width:50%">
             <img  loading="lazy" class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
     </th>
 </table>
-<table loading="lazy" style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue1.webp" style="width: 100%">
@@ -92,7 +92,7 @@
     </tr>
 </table>
 
-<table loading="lazy" style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table class="Hide" style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
         </th>
@@ -104,7 +104,7 @@
         </th>
 </table>
 
-<table loading="lazy" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table  style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
@@ -113,7 +113,7 @@
 </table>
 
 
-<table loading="lazy" class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:45.5%" >
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
@@ -129,7 +129,7 @@
     </tr>
 </table>
 
-<table loading="lazy"  class= "Hide" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table  class= "Hide" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
@@ -139,7 +139,7 @@
 
 
 
-<table loading="lazy" class= "Hide"  style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table class= "Hide"  style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white1.webp" style="width: 100%">
@@ -159,7 +159,7 @@
         </th>
     </tr>
 </table>
-<table loading="lazy"  class= "Hide"  style="width: 67%;padding-top: 2px;">
+<table class= "Hide"  style="width: 67%;padding-top: 2px;">
     <tr>
         <th style="width:67%">
                 <img  loading="lazy" class = "myImages" id="myImg" src="Images/white6.webp" style="width: 100%">
@@ -172,7 +172,7 @@
 </table>
 
 
-<table loading="lazy" class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table  class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:16.66%">
                 <img class = "myImages" id="myImg" src="Images/out7.webp" style="width: 100%">
