--- a/matte.html
+++ b/matte.html
@@ -42,30 +42,18 @@
 <table style="padding-top: 50px; border-collapse: collapse" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:26.40%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/fendi.webp" style="width: 100%">
-                <div class="content_img"><p>MILAN, 2021</p></div>
-            </div>
         </th>
         <th style="width:23.40%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/tunel.webp" style="width: 100%">
-                <div><p>ANTWERP, 2021</p></div>
-            </div>
         </th>
         <th style="width:49.8%;" rowspan="2">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/maserati.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
     </tr>
     <tr>
         <th style="width:50%;" colspan="2">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/eiffel.webp" style="width: 100%">
-                <div><p>PARIS, 2021</p></div>
-            </div>
         </th>
     </tr>
 
@@ -74,34 +62,19 @@
 <table style="padding-top: 150px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/berlin1.webp" style="width: 100%">
-                <div><p>BERLIN, 2021</p></div>
-            </div>
         </th>
         <th style="width:20%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/lisbon1.webp" style="width: 100%">
-                <div><p>LISBON, 2020</p></div>
-            </div>
         </th>
         <th style="width:20%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/vans.webp" style="width: 100%">
-                <div><p>LISBON, 2020</p></div>
-            </div>
         </th>
         <th style="width:20%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/lisbon2.webp" style="width: 100%">
-                <div><p>LISBON, 2020</p></div>
-            </div>
         </th>
         <th style="width:20%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/berlin2.webp" style="width: 100%">
-                <div><p>BERLIN, 2021</p></div>
-            </div>
         </th>
     </tr>
 </table>
@@ -109,62 +82,35 @@
 <table style="padding-top: 10px;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:7.8%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/rome1.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
         <th style="width:18%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/rome2.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
         <th style="width:8%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/rome3.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
         <th style="width:17%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/rome4.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
         <th style="width:43.5%" rowspan="3">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/rome11.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
     </tr>
     <tr>
         <td class="nest" colspan="4">
             <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
                 <th style="width:11.1%">
-                    <div class="content_img">
                         <img class = "myImages" id="myImg" src="Images/rome5.webp" style="width: 100%">
-                        <div><p>ROME, 2021</p></div>
-                    </div>
                 </th>
                 <th style="width:24.9%">
-                    <div class="content_img">
                         <img class = "myImages" id="myImg" src="Images/rome6.webp" style="width: 100%">
-                        <div><p>ROME, 2021</p></div>
-                    </div>
                 </th>
                 <th style="width:11.1%">
-                    <div class="content_img">
                         <img class = "myImages" id="myImg" src="Images/rome7.webp" style="width: 100%">
-                        <div><p>ROME, 2021</p></div>
-                    </div>
                 </th>
                 <th style="width:11.1%">
-                    <div class="content_img">
                         <img class = "myImages" id="myImg" src="Images/rome3.webp" style="width: 100%">
-                        <div><p>ROME, 2021</p></div>
-                    </div>
                 </th>
             </table>
         </td>
@@ -173,16 +119,10 @@
         <td class="nest" colspan="4">
             <table style="width: 100%" cellspacing="0" cellpadding="0" border="0">
                 <th style="width:25%" colspan="2">
-                    <div class="content_img">
                         <img class = "myImages" id="myImg" src="Images/rome9.webp" style="width: 100%">
-                        <div><p>ROME, 2021</p></div>
-                    </div>
                 </th>
                 <th style="width:25%" colspan="2">
-                    <div class="content_img">
                         <img class = "myImages" id="myImg" src="Images/rome10.webp" style="width: 100%">
-                        <div><p>ROME, 2021</p></div>
-                    </div>
                 </th>
             </table>
         </td>
@@ -196,30 +136,18 @@
 <table style="padding-top: 10px;padding-bottom: 100px; border-collapse: collapse; width: 55%" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:100%" colspan="3">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/lx1.webp" style="width: 100%">
-                <div><p>LISBON, 2020</p></div>
-            </div>
         </th>
     </tr>
     <tr>
         <th style="width:33.332%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/lx2.webp" style="width: 100%">
-                <div><p>LISBON, 2020</p></div>
-            </div>
         </th>
         <th style="width:33.332%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/lx3.webp" style="width: 100%">
-                <div><p>LISBON, 2020</p></div>
-            </div>
         </th>
         <th style="width:33.332%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/lx4.webp" style="width: 100%">
-                <div><p>LISBON, 2020</p></div>
-            </div>
         </th>
     </tr>
 </table>
@@ -245,36 +173,21 @@
 <table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:25%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/ava1.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
         <th style="width:25%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/ava3.webp" style="width: 100%">
-                <div><p>PORTIMÃO, 2022</p></div>
-            </div>
         </th>
         <th style="width:42%" rowspan="2">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/ava5.webp" style="width: 100%">
-                <div><p>PORTIMÃO, 2022</p></div>
-            </div>
         </th>
     </tr>
     <tr>
         <th style="width:25%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/ava4.webp" style="width: 100%">
-                <div><p>PORTIMÃO, 2022</p></div>
-            </div>
         </th>
         <th style="width:25%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/ava2.webp" style="width: 100%">
-                <div><p>ROME, 2021</p></div>
-            </div>
         </th>
     </tr>
 </table>
@@ -283,46 +196,30 @@
 <table style="padding-top: 100px;width: 60%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:32.2%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/buda.webp" style="width: 100%">
-                <div><p>BUDAPEST, 2021</p></div>
-            </div>
         </th>
         <th style="width: 5px"/>
         <th style="width:28.6%">
-            <div class="content_img">
                 <img class = "myImages" id="myImg" src="Images/ams.webp" style="width: 100%">
-                <div><p>AMSTERDAM, 2021</p></div>
-            </div>
         </th>
         <th style="width: 5px"/>
-        <th style="width:34.2%"><div class="content_img">
+        <th style="width:34.2%">
             <img class = "myImages" id="myImg" src="Images/antwerp.webp" style="width: 100%">
-            <div><p>ANTWERP, 2021</p></div>
-        </div></th>
+        </th>
     </tr>
 </table>
 <div style="padding-top: 8px"/>
 <table cellpadding="0" border="0" style="width: 60%; padding-bottom: 100px" >
     <th style="width:36%">
-        <div class="content_img">
             <img class = "myImages" id="myImg" src="Images/chinatown.webp" style="width: 100%">
-            <div><p>ANTWERP, 2021</p></div>
-        </div>
     </th>
     <th style="width: 2px"/>
     <th style="width:30.2%">
-        <div class="content_img">
             <img class = "myImages" id="myImg" src="Images/lxbuild.webp" style="width: 100%">
-            <div><p>LISBON, 2020</p></div>
-        </div>
     </th>
     <th style="width: 2px"/>
     <th style="width:30.2%">
-        <div class="content_img">
             <img class = "myImages" id="myImg" src="Images/groni.webp" style="width: 100%">
-            <div><p>GRONINGEN, 2021</p></div>
-        </div>
     </th>
 </table>
 
