--- a/bold.html
+++ b/bold.html
@@ -204,7 +204,7 @@
 </table>
 
 <div class = desktop style="padding-bottom: 5%">
-    <p> More content on Desktop.</p>
+    <p> More content on Desktop View.</p>
 </div>
 
 <div class = footer style="padding-bottom: 5%">
@@ -212,7 +212,6 @@
 </div>
 
 <div id="myModal" class="modal" >
-
     <!-- The Close Button -->
     <span class="close">&times;</span>
 
