--- a/bold/index.html
+++ b/bold/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
     <title>Tiago's Portfolio</title>
-    <link rel="icon" href="Images/ass.webp">
+    <link rel="icon" href="../Images/ass.webp">
     <style>
         .header-container {
             display: flex;
@@ -39,10 +39,10 @@
         <a href="mailto:info@tfcoelho.com">CONTACT</a>
     </div>
     <div class="header-item">
-        <a href="index.html"><img src="Images/Signature.png" alt="Signature" class="center"></a>
+        <a href="../index.html"><img src="../Images/Signature.png" alt="Signature" class="center"></a>
     </div>
     <div class="header-item">
-        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="Images/insta.png" alt="Instagram" style="width: 20px;"></a>
+        <a href="https://www.instagram.com/_tiagocoelho_/"><img src="../Images/insta.png" alt="Instagram" style="width: 20px;"></a>
     </div>
 </header>
 
@@ -54,60 +54,60 @@
 <table style="width: 67%; padding-top: 5%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:38.5%" rowspan="2">
-                <img  loading="eager" class = "myImages" id="myImg" src="Images/Paganotto.webp" style="width: 100%">
+                <img  loading="eager" class = "myImages" id="myImg" src="../Images/Paganotto.webp" style="width: 100%">
         </th>
         <th style="width:35%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange2.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/orange2.webp" style="width: 100%">
         </th>
         <th style="width:15.6%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/char5.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char5.webp" style="width: 100%">
         </th>
     </tr>
     <tr>
         <th style="width:50%;" colspan="2">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/orange4.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/orange4.webp" style="width: 100%">
         </th>
     </tr>
 </table>
 
 <table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <th style="width:50%">
-            <img  loading="lazy" class = "myImages" id="myImg" src="Images/char6.webp" style="width: 100%">
+            <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char6.webp" style="width: 100%">
     </th>
 </table>
 <table style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:8%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue1.webp" style="width: 100%">
         </th>
         <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue2.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue2.webp" style="width: 100%">
         </th>
         <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue3.webp" style="width: 100%">
         </th>
         <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue4.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue4.webp" style="width: 100%">
         </th>
     </tr>
 </table>
 
 <table class="Hide" style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
         <th style="width:8%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/char1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char1.webp" style="width: 100%">
         </th>
         <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue6.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue6.webp" style="width: 100%">
         </th>
         <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/blue7.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue7.webp" style="width: 100%">
         </th>
 </table>
 
 <table  style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/red3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/red3.webp" style="width: 100%">
         </th>
     </tr>
 </table>
@@ -116,15 +116,15 @@
 <table class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:45.5%" >
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/char3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char3.webp" style="width: 100%">
         </th>
         <th style="width:38.8%;" rowspan="2">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/letyago.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/letyago.webp" style="width: 100%">
         </th>
     </tr>
     <tr>
         <th style="width:45.5%;" >
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/stage1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/stage1.webp" style="width: 100%">
         </th>
     </tr>
 </table>
@@ -132,7 +132,7 @@
 <table  class= "Hide" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:50%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/red1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/red1.webp" style="width: 100%">
         </th>
     </tr>
 </table>
@@ -142,31 +142,31 @@
 <table class= "Hide"  style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white1.webp" style="width: 100%">
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white3.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white3.webp" style="width: 100%">
             </div>
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/moch1.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/moch1.webp" style="width: 100%">
         </th>
         <th style="width:1%"></th>
         <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white4.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white4.webp" style="width: 100%">
         </th>
     </tr>
 </table>
 <table class= "Hide"  style="width: 67%;padding-top: 2px;">
     <tr>
         <th style="width:67%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white6.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white6.webp" style="width: 100%">
         </th>
         <th style="width:0.5%"></th>
         <th style="width:30%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="Images/white5.webp" style="width: 100%">
+                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white5.webp" style="width: 100%">
         </th>
     </tr>
 </table>
@@ -175,29 +175,29 @@
 <table  class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="Images/out7.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="../Images/out7.webp" style="width: 100%">
         </th>
         <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="Images/out2.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="../Images/out2.webp" style="width: 100%">
         </th>
         <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="Images/out3.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="../Images/out3.webp" style="width: 100%">
         </th>
         <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="Images/out4.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="../Images/out4.webp" style="width: 100%">
         </th>
 
         <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="Images/moch2.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="../Images/moch2.webp" style="width: 100%">
         </th>
         <th style="width:14.9%">
-                <img class = "myImages" id="myImg" src="Images/out6.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="../Images/out6.webp" style="width: 100%">
         </th>
     </tr>
     <tr>
         <th colspan="6">
             <div class="content_img">
-                <img class = "myImages" id="myImg" src="Images/panoo.webp" style="width: 100%">
+                <img class = "myImages" id="myImg" src="../Images/panoo.webp" style="width: 100%">
             </div>
         </th>
     </tr>
