--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </a>
   </div>
   <div class="container2">
-    <a href="bold.html">
+    <a href="bold">
       <img src="Images/assc.webp" alt="" class="image">
       <div class="overlay">
         <img src="Images/ass2.webp" alt="" class="image">
