--- a/bold/test.html
+++ b/bold/test.html
@@ -56,10 +56,10 @@
         <img loading="eager" class="myImages" id="myImg1" src="../Images/Paganotto.webp" style="width: 100%;">
     </div>
     <div style="flex: 0 0 57%; display: flex; flex-wrap: wrap;">
-        <div style="flex: 0 0 70%; padding-right: 0%;">
+        <div style="flex: 0 0 69.25%; padding-right: 0%;">
             <img loading="lazy" class="myImages" id="myImg2" src="../Images/orange2.webp" style="width: 100%;">
         </div>
-        <div style="flex: 0 0 30%;">
+        <div style="flex: 0 0 30.75%;">
             <img loading="lazy" class="myImages" id="myImg3" src="../Images/char5.webp" style="width: 100%;">
         </div>
         <div style="flex: 0 0 100%;">
@@ -68,144 +68,115 @@
     </div>
 </div>
 
-<table style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <th style="width:50%">
-            <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char6.webp" style="width: 100%">
-    </th>
-</table>
-<table style="padding-top: 5%; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <tr>
-        <th style="width:8%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue1.webp" style="width: 100%">
-        </th>
-        <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue2.webp" style="width: 100%">
-        </th>
-        <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue3.webp" style="width: 100%">
-        </th>
-        <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue4.webp" style="width: 100%">
-        </th>
-    </tr>
-</table>
+<div style="padding-top: 5%; width: 40%; align: center; margin: auto">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char6.webp" style="width: 100%">
+</div>
 
-<table class="Hide" style="padding-top: -10px; width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-        <th style="width:8%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char1.webp" style="width: 100%">
-        </th>
-        <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue6.webp" style="width: 100%">
-        </th>
-        <th style="width:8%;">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue7.webp" style="width: 100%">
-        </th>
-</table>
+<div style="display: flex; flex-wrap: wrap; width: 67%; padding-top: 5%;margin: auto">
+        <div style="flex: 0 0 25%; padding-right: 0%;">
+            <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue1.webp" style="width: 100%">
+        </div>
+        <div style="flex: 0 0 25%;">
+            <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue2.webp" style="width: 100%">
+        </div>
+        <div style="flex: 0 0 25%;">
+            <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue3.webp" style="width: 100%">
+        </div>
+        <div style="flex: 0 0 25%;">
+            <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue4.webp" style="width: 100%">
+        </div>
+</div>
 
-<table  style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <tr>
-        <th style="width:50%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/red3.webp" style="width: 100%">
-        </th>
-    </tr>
-</table>
+<div style="display: flex; flex-wrap: wrap; width: 67%;margin: auto">
+    <div style="flex: 0 0 33.3%; padding-right: 0%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char1.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 33.3%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue6.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 33.3%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/blue7.webp" style="width: 100%">
+    </div>
+</div>
 
+<div style="padding-top: 5%; width: 40%; align: center; margin: auto">
+    <img  loading="lazy" class = "myImages" id="myImg" src="../Images/red3.webp" style="width: 100%">
+</div>
 
-<table class= "Hide" style="padding-top: 5%;width: 67%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <tr>
-        <th style="width:45.5%" >
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/char3.webp" style="width: 100%">
-        </th>
-        <th style="width:38.8%;" rowspan="2">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/letyago.webp" style="width: 100%">
-        </th>
-    </tr>
-    <tr>
-        <th style="width:45.5%;" >
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/stage1.webp" style="width: 100%">
-        </th>
-    </tr>
-</table>
+<div style="display: flex; flex-wrap: wrap; width: 67%; padding-top: 5%;margin: auto">
+    <div style="flex: 0 0 54%; display: flex; flex-wrap: wrap;">
+        <div style="flex: 0 0 100%; padding-right: 0%;">
+            <img loading="lazy" class="myImages" id="myImg2" src="../Images/char3.webp" style="width: 100%;">
+        </div>
+        <div style="flex: 0 0 100%;">
+            <img loading="lazy" class="myImages" id="myImg3" src="../Images/stage1.webp" style="width: 100%;">
+        </div>
+    </div>
+    <div style="flex: 0 0 46%; padding-right: 0%;">
+        <img loading="eager" class="myImages" id="myImg1" src="../Images/letyago.webp" style="width: 100%;">
+    </div>
+</div>
 
-<table  class= "Hide" style="padding-top: 5%; width: 40%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <tr>
-        <th style="width:50%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/red1.webp" style="width: 100%">
-        </th>
-    </tr>
-</table>
+<div style="padding-top: 5%; width: 40%; align: center; margin: auto">
+    <img  loading="lazy" class = "myImages" id="myImg" src="../Images/red1.webp" style="width: 100%">
+</div>
 
 
 
-<table class= "Hide"  style="padding-top: 5%;width: 67%;padding-bottom: 0px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <tr>
-        <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white1.webp" style="width: 100%">
-        </th>
-        <th style="width:1%"></th>
-        <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white3.webp" style="width: 100%">
-            </div>
-        </th>
-        <th style="width:1%"></th>
-        <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/moch1.webp" style="width: 100%">
-        </th>
-        <th style="width:1%"></th>
-        <th style="width:20%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white4.webp" style="width: 100%">
-        </th>
-    </tr>
-</table>
-<table class= "Hide"  style="width: 67%;padding-top: 2px;">
-    <tr>
-        <th style="width:67%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white6.webp" style="width: 100%">
-        </th>
-        <th style="width:0.5%"></th>
-        <th style="width:30%">
-                <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white5.webp" style="width: 100%">
-        </th>
-    </tr>
-</table>
+<div style="display: flex; flex-wrap: wrap; width: 67%; padding-top: 5%;margin: auto">
+    <div style="flex: 0 0 24%; padding-right: 1%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white1.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 24%; padding-right: 1%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white3.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 24%; padding-right: 1%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/moch1.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 24%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white4.webp" style="width: 100%">
+    </div>
+</div>
 
+<div style="display: flex; flex-wrap: wrap; width: 67%; padding-top: 4px;margin: auto">
+    <div style="flex: 0 0 68%; padding-right: 1%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white6.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 30%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/white5.webp" style="width: 100%">
+    </div>
+</div>
 
-<table  class= "Hide" style="padding-top: 5%;padding-bottom: 100px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-    <tr>
-        <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="../Images/out7.webp" style="width: 100%">
-        </th>
-        <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="../Images/out2.webp" style="width: 100%">
-        </th>
-        <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="../Images/out3.webp" style="width: 100%">
-        </th>
-        <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="../Images/out4.webp" style="width: 100%">
-        </th>
+<div style="display: flex; flex-wrap: wrap; width: 67%; padding-top: 5%;margin: auto">
+    <div style="flex: 0 0 16.6%; padding-right: 0%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/out7.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 16.6%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/out2.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 16.6%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/out3.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 16.6%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/out4.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 16.6%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/moch2.webp" style="width: 100%">
+    </div>
+    <div style="flex: 0 0 14.9%;">
+        <img  loading="lazy" class = "myImages" id="myImg" src="../Images/out6.webp" style="width: 100%">
+    </div>
+</div>
 
-        <th style="width:16.66%">
-                <img class = "myImages" id="myImg" src="../Images/moch2.webp" style="width: 100%">
-        </th>
-        <th style="width:14.9%">
-                <img class = "myImages" id="myImg" src="../Images/out6.webp" style="width: 100%">
-        </th>
-    </tr>
-    <tr>
-        <th colspan="6">
-            <div class="content_img">
-                <img class = "myImages" id="myImg" src="../Images/panoo.webp" style="width: 100%">
-            </div>
-        </th>
-    </tr>
-</table>
+<div style="width: 67%; align: center; margin: auto">
+    <img  loading="lazy" class = "myImages" id="myImg" src="../Images/panoo.webp" style="width: 100%">
+</div>
 
 <div class = desktop style="padding-bottom: 5%">
     <p> More content on Desktop View.</p>
 </div>
 
-<div class = footer style="padding-bottom: 5%">
+<div class = footer style="padding-bottom: 5%; padding-top: 5%">
     <p> 2024 © All rights reserved | Tiago Coelho</p>
 </div>
 
