matte small change

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <div class="gallery">
   <div class="container2">
-    <a href="matte.html">
+    <a href="matte">
       <img src="Images/ass3.webp" alt="" class="image">
       <div class="overlay">
         <img src="Images/ass5.webp" alt="" class="image">
