--- a/bold/index.html
+++ b/bold/index.html
@@ -39,7 +39,7 @@
         <a href="mailto:info@tfcoelho.com">CONTACT</a>
     </div>
     <div class="header-item">
-        <a href="../index.html"><img src="../Images/Signature.png" alt="Signature" class="center"></a>
+        <a href=".."><img src="../Images/Signature.png" alt="Signature" class="center"></a>
     </div>
     <div class="header-item">
         <a href="https://www.instagram.com/_tiagocoelho_/"><img src="../Images/insta.png" alt="Instagram" style="width: 20px;"></a>
