--- a/budapest/index.html
+++ b/budapest/index.html
@@ -5,77 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Budapest Trip Schedule</title>
   <style>
-    /* Full-page styling */
     body {
       margin: 0;
       padding: 0;
       background: linear-gradient(to bottom, #A8CFFF, #F5E3FF); /* Match Canva's background */
       font-family: Arial, sans-serif;
-      overflow-x: hidden;
-    }
-
-    /* PDF Viewer Centered */
-    .pdf-viewer {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 80vh; /* Adjust to your preference */
-      margin: 20px 0;
+      height: 100vh; /* Full screen height */
+      overflow: hidden; /* Prevent scrolling */
     }
 
-    .pdf-viewer iframe {
-      width: 80%; /* Adjust to fit your PDF */
-      height: 100%;
-      border: none;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    .schedule-container {
+      position: relative;
+      width: 80%; /* Adjust width */
+      max-width: 1200px; /* Limit max size */
     }
 
-    /* Background design elements */
-    .graphic {
-      position: absolute;
-      z-index: -1; /* Send to the background */
-    }
-
-    .clouds {
-      top: 10%;
-      left: 5%;
-      width: 200px;
-    }
-
-    .flower {
-      bottom: 10%;
-      right: 10%;
-      width: 100px;
-    }
-
-    /* Buttons for hyperlinks */
-    .nav-buttons {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-
-    .nav-buttons a {
-      text-decoration: none;
-      padding: 10px 20px;
-      margin: 0 10px;
-      color: white;
-      background: #8265C5;
-      border-radius: 5px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      font-weight: bold;
-    }
-
-    .nav-buttons a:hover {
-      background: #A87FF3;
+    .schedule-container img {
+      width: 100%; /* Responsive image */
+      height: auto;
+      display: block;
     }
   </style>
 </head>
 <body>
 
-  <!-- Embed your PDF -->
-  <div class="pdf-viewer">
-    <iframe src="schedule.pdf" title="Budapest Trip Schedule"></iframe>
+  <div class="schedule-container">
+    <!-- PNG Image with Image Map -->
+    <img src="schedule.png" alt="Budapest Trip Schedule" usemap="#schedule-map">
+
+    <!-- Image Map -->
+    <map name="schedule-map">
+      <area shape="rect" coords="200,300,400,500" href="termal-spa.html" alt="Termas">
+      <area shape="rect" coords="450,550,650,750" href="zoo-cafe.html" alt="Zoo Café">
+      <area shape="rect" coords="700,600,900,800" href="ice-skate.html" alt="Ice Skating">
+      <area shape="rect" coords="1000,800,1200,1000" href="evening-cruise.html" alt="Evening Cruise">
+    </map>
   </div>
 
 </body>
